--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                             <label for="title">Ngày sinh</label>
                             <span>*</span>
                         </div>
-                        <input id="title" class="bg-gray-100" type="date" placeholder="" required>
+                        <input id="date" class="bg-gray-100" type="date" placeholder="" value="09/11/2021" required>
                     </div>
 
 
