--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
                 <!-- Begin: Birthday and Address -->
 
-                <div class="grid xs:grid-cols-2 grid-cols-1 gap-4">
+                <div class="grid sm:grid-cols-2 grid-cols-1 gap-4">
                     <div class="form-item">
                         <div class="title">
                             <label for="title">Ngày sinh</label>
