--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                     <div class="title">
                         <label for="title">4. Thương hiệu máy tính bạn đang sử dụng hoăc quan tâm?</label>
                     </div>
-                    <textarea rows="4" cols="50" id="title" class="bg-gray-100 p-2"
+                    <textarea rows="4" cols="50" id="title" class="bg-gray-100 p-2 text-black"
                         placeholder="VD: Asus, Dell, Acer, ..."></textarea>
                 </div>
 
@@ -314,7 +314,7 @@
                         <label for="title">5. Bạn có điều gì mong muốn được các diễn giả cũng như ITB chúng
                             mình giải đáp trong buổi Hội thảo này?</label>
                     </div>
-                    <textarea rows="4" cols="50" id="title" class="bg-gray-100 p-2" placeholder=" ..."></textarea>
+                    <textarea rows="4" cols="50" id="title" class="bg-gray-100 p-2 text-black" placeholder=" ..."></textarea>
                 </div>
             </form>
         </div>
